--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint .",
-    "start": "node src/index.js",
+    "tweet": "node src/index.js",
+    "start": "echo \"Nothing to run...\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
